# RWA-anchor

.github/: dependabot.yml
v1/: Anchor.toml  txtx.yml
v1/programs/v1/: Cargo.toml
v1/programs/v1/src/: constants.rs  error.rs  lib.rs
v1/programs/v1/src/instructions/: create_mint.rs  mint_token.rs  mod.rs  register_creator.rs
v1/programs/v1/src/instructions/admin/: init_global_config.rs  mod.rs  onboard_creator.rs
v1/programs/v1/src/state/: creator.rs  global_config.rs  mod.rs
v1/programs/v1/src/utils/: token.rs
v1/runbooks/: README.md
v1/runbooks/deployment/: main.tx
v1/tests/: v1.ts
