[package]
name = "v1"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "v1"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-sbf = []
anchor-debug = []
custom-panic = []
custom-heap = []

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed", "lazy-account"]}
anchor-spl = { version = "0.31.1", features = ["metadata"]}
solana-security-txt = "1.1.1"
